--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,7 @@
 .e-sidebar.e-dock {
   background: #aab8da;
 }
+
+@import '../node_modules/@syncfusion/ej2-base/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-inputs/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-react-dropdowns/styles/material.css';
