--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,7 @@
 @import '../node_modules/@syncfusion/ej2-base/styles/material.css';
 @import '../node_modules/@syncfusion/ej2-inputs/styles/material.css';
 @import '../node_modules/@syncfusion/ej2-react-dropdowns/styles/material.css';
+
+@import '../node_modules/@syncfusion/ej2-base/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-react-buttons/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-react-popups/styles/material.css';
