--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,6 @@
 @import '../node_modules/@syncfusion/ej2-base/styles/material.css';
 @import '../node_modules/@syncfusion/ej2-react-buttons/styles/material.css';
 @import '../node_modules/@syncfusion/ej2-react-popups/styles/material.css';
+
+@import '../node_modules/@syncfusion/ej2-base/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-react-inputs/styles/material.css';
