Done with the Dialog format

--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,11 @@
 @import '../node_modules/@syncfusion/ej2-notifications/styles/material.css';
 @import '../node_modules/@syncfusion/ej2-react-grids/styles/material.css';
 
+@import '../node_modules/@syncfusion/ej2-base/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-buttons/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-popups/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-react-navigations/styles/material.css';
+
 :root {
   --primary-color: #4f46e5; /* Indigo */
   --secondary-color: #f3f4f6; /* Light Gray */
