--- a/src/App.css
+++ b/src/App.css
@@ -135,3 +135,18 @@ button.danger:hover {
   border-radius: 4px; /* Optional: Add rounded corners */
   background-color: #f9f9f9; /* Optional: Add a background color */
 }
+
+.e-grid .e-headercell {
+  background-color: #111827; /* Override the header background color */
+  color: #fff;
+}
+
+.e-grid .e-gridpager {
+  font-family: cursive;
+  background-color: #deecf9;
+}
+
+.e-grid .e-pagercontainer {
+  border: 2px solid #00b5ff;
+  font-family: cursive;
+}
