Added Gslot Dialog

--- a/src/App.css
+++ b/src/App.css
@@ -141,12 +141,12 @@ button.danger:hover {
   color: #fff;
 }
 
-.e-grid .e-gridpager {
+/* .e-grid .e-gridpager {
   font-family: cursive;
   background-color: #deecf9;
-}
+} */
 
-.e-grid .e-pagercontainer {
+/* .e-grid .e-pagercontainer {
   border: 2px solid #00b5ff;
   font-family: cursive;
-}
+} */
