Done, awaiting confirmation

--- a/template.dflow.jinja
+++ b/template.dflow.jinja
@@ -1,13 +1,21 @@
 triggers
-    {%- if intents %}
+    {% if intents %}
     {%- for intent in intents %}
     Intent {{ intent.name }}
         {%- for string in intent.strings %} 
         {{ string }}{% if not loop.last %}, {% endif %}{%- endfor %}
     end
-    {%- endfor %}
+    {% endfor -%}
+    {%- endif %}
+    {% if events %}
+    {%- for event in events -%}
+    Event {{ event.name }}
+        "{{ event.uri }}"
+    end
+    {% endfor -%}
     {%- endif %}
 end
+
 {% if services %}
 eservices
     {%- for service in services %}
@@ -23,26 +31,26 @@ eservices
     end
     {%- endfor %}
 end
-{% endif -%}
+{% endif %}
 
 {%- if entities %}
 entities
     {%- for entity in entities %}
     Entity {{ entity.name }}
         {%- for value in entity['values'] %}
-        {{ value }}{% if not loop.last %}, {% endif %}
+        "{{ value }}"{% if not loop.last %}, {% endif %}
         {%- endfor %}
     end
     {%- endfor %}
 end
-{% endif -%}
+{% endif %}
 
 {%- if synonyms %}
 synonyms 
     {%- for synonym in synonyms %}
     Synonym {{ synonym.name }}
         {%- for synonym in synonym['values'] %}
-        {{ synonym }}{% if not loop.last %}, {% endif %}
+        "{{ synonym }}"{% if not loop.last %}, {% endif %}
         {%- endfor %}
     end
     {%- endfor %}
@@ -68,9 +76,12 @@ dialogues
           Form {{ response.name }}
               {%- for slot in response.slots %}
               {%- if slot.source == 'gridDataHRI' %}
-              {{ slot.name }}: {{ slot.type }} = HRI('{{ slot.hriString }}', [{{ slot.entity }}]){% if not loop.last %} {% endif %}
+              {{ slot.name }}: {{ slot.type }} = HRI({{ slot.hriString }}{% if slot.entity %}, [{{ slot.entity }}]{% endif %}{% if slot.value %}, [{{ slot.value }}]{% endif %}){% if not loop.last %} {% endif %}
               {%- elif slot.source == 'gridDataService' %}
-              {{ slot.name }}: {{ slot.type }} = {{ slot.service }}(query=[{{ slot.query }}], header=[{{ slot.header }}],)[{{ slot.body }}]{% if not loop.last %} {% endif %}
+              {{ slot.name }}: {{ slot.type }} = {{ slot.service }}(
+                  {%- if slot.query %}query=[{{ slot.query }}]{% if slot.header or slot.path %}, {% endif %}{% endif %}
+                  {%- if slot.header %}header=[{{ slot.header }}]{% if slot.path %}, {% endif %}{% endif %}
+                  {%- if slot.path %}path=[{{ slot.path }}]{% endif %},){%- if slot.body %}[{{ slot.body }}]{%- endif %}{% if not loop.last %} {% endif %}
               {%- endif %}
               {%- endfor %}
           end,
@@ -78,18 +89,15 @@ dialogues
           ActionGroup {{ response.name }}
               {%- for action in response.actions %}
               {%- if action.speak %}
-              Speak('{{ action.speak }}')
+              Speak({{ action.speak }})
               {%- elif action.uri %}
-              FireEvent('{{ action.uri }}', '{{ action.message }}')
+              FireEvent('{{ action.uri }}', {{ action.message }})
               {%- elif action.serviceName %}
-              {{ action.serviceName }}=({%- if action.serviceQuery %}
-                  query=[{{ action.serviceQuery }}], {% endif %}
-                  {%- if action.serviceHeader %}
-                  header=[{{ action.serviceHeader }}], {%- endif %}
-                  {%- if action.servicePath %}
-                  path=[{{ action.servicePath }}], {%- endif %}
-                  {%- if action.serviceBody %}
-                  body=[{{ action.serviceBody }}]{%- endif %})
+              {{ action.serviceName }}=(
+                  {%- if action.serviceQuery %}query=[{{ action.serviceQuery }}]{% if action.serviceHeader or action.servicePath or action.serviceBody %}, {% endif %}{% endif %}
+                  {%- if action.serviceHeader %}header=[{{ action.serviceHeader }}]{% if action.servicePath or action.serviceBody %}, {% endif %}{% endif %}
+                  {%- if action.servicePath %}path=[{{ action.servicePath }}]{% if action.serviceBody %}, {% endif %}{% endif %}
+                  {%- if action.serviceBody %}body=[{{ action.serviceBody }}]{% endif %},)
               {%- elif action.gslotName %}
               SetGSlot({{ action.gslotName }}, {{ action.gslotValue }})
               {%- elif action.formSlotName %}
