--- a/template.dflow.hbs
+++ b/template.dflow.hbs
@@ -1,15 +1,17 @@
 triggers
-{{#if intents}}
+
+{{~#if intents}}
     {{#each intents}}
+
     Intent {{name}}
         {{#each strings}} 
         {{{this}}}{{#unless @last}}, {{/unless}}
         {{/each}}
     end
-    {{/each}}
-{{/if}}
+    {{/each~}}
 end
 
+{{/if}}
 {{#if services}}
 eservices
     {{#each services}}
@@ -61,45 +63,46 @@ end
 {{/if}}
 {{#if dialogues}}
 dialogues
-    {{#each dialogues}}
+    {{~#each dialogues}}
+    
     Dialogue {{name}}
         on: {{trigger}}
         responses:
           {{#each responses}}
           {{#if (eq type 'Form')}}
-          Form {{name}}
-              {{#each slots}}
-              {{#if (eq source 'gridDataHRI')}}
-              {{name}}: {{type}} = HRI('{{hriString}}', [{{entity}}]){{#unless @last}} {{/unless}}
-              {{else if (eq source 'gridDataService')}}
-              {{name}}: {{type}} = {{service}}(query=[{{query}}], header=[{{header}}],)[{{body}}]{{#unless @last}} {{/unless}}
-              {{/if}}
-              {{/each}}
-          end,
-            {{else if (eq type 'ActionGroup')}}
+            Form {{name}}
+                {{#each slots}}
+                {{#if (eq source 'gridDataHRI')}}
+                {{name}}: {{type}} = HRI('{{{hriString}}}', [{{entity}}]){{#unless @last}} {{/unless}}
+                {{else if (eq source 'gridDataService')}}
+                {{name}}: {{type}} = {{service}}(query=[{{query}}], header=[{{header}}],)[{{body}}]{{#unless @last}} {{/unless}}
+                {{/if}}
+                {{/each}}
+            end,
+            {{~else if (eq type 'ActionGroup')}}
             ActionGroup {{name}}
-              {{#each actions}}
-              {{#if speak}}
-              Speak('{{speak}}')
-              {{else if uri}}
-              FireEvent('{{uri}}', '{{message}}')
-              {{else if serviceName}}
-              {{serviceName}}=({{#if serviceQuery}}
-                  query=[{{serviceQuery}}], {{/if}}
-                  {{#if serviceHeader}}
-                  header=[{{serviceHeader}}], {{/if}}
-                  {{#if servicePath}}
-                  path=[{{servicePath}}], {{/if}}
-                  {{#if serviceBody}}
-                  body=[{{serviceBody}}]{{/if}})
-              {{else if gslotName}}
-              SetGSlot({{gslotName}}, {{gslotValue}})
-              {{else if formSlotName}}
-              SetFSlot({{formSlotName}}, {{formSlotValue}})
-              {{else if fslotName}}
-              SetFSlot({{fslotName}}, {{fslotValue}})
-              {{/if}}
-              {{/each}}
+                {{#each actions}}
+                {{#if speak}}
+                Speak({{{formatSpeak speak}}})
+                {{else if uri}}
+                FireEvent('{{uri}}', '{{message}}')
+                {{else if serviceName}}
+                {{serviceName}}=({{#if serviceQuery}}
+                    query=[{{serviceQuery}}], {{/if}}
+                    {{#if serviceHeader}}
+                    header=[{{serviceHeader}}], {{/if}}
+                    {{#if servicePath}}
+                    path=[{{servicePath}}], {{/if}}
+                    {{#if serviceBody}}
+                    body=[{{serviceBody}}]{{/if}})
+                {{else if gslotName}}
+                SetGSlot({{gslotName}}, {{gslotValue}})
+                {{else if formSlotName}}
+                SetFSlot({{formSlotName}}, {{formSlotValue}})
+                {{else if fslotName}}
+                SetFSlot({{fslotName}}, {{fslotValue}})
+                {{/if}}
+                {{/each}}
             end
     end      {{/if}}
           {{/each}}
